<resources>
    <string name="app_name">Financial Manager</string>
    <string-array name="currency_codes">
        <item>USD</item>
        <item>EUR</item>
        <item>CAD</item>
        <item>JPY</item>
    </string-array>
    <string-array name="full_months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="abbreviated_months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string name="create_account_title">Create An Account</string>
    <string name="menu_title">Menu</string>
    <string name="add_manual_card_title">Add Manual Card</string>
    <string name="add_auto_card_title">Add Auto Card</string>
    <string name="add_manual_transaction_title">Add Transaction</string>
    <string name="select_card_title">Select Card</string>
    <string name="view_history_title">History For %1$s</string>
    <string name="edit_card_title">Edit Card</string>
    <string name="edit_transaction_title">Edit Transaction</string>
    <string name="delete_card_title">Delete %1$s?</string>
    <string name="monthly_calculations_title">Choose Month And Cards</string>
    <string name="monthly_results_title">Monthly Results</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="settings_title">Settings</string>
    <string name="delete_user">Delete Account</string>
    <string name="query_transactions_title">Query Transactions</string>
    <string name="query_transactions_result_title">Query Transactions Results</string>
    <string name="verify_email_title">Verify Your Email</string>
    <string name="faq_title">FAQ</string>
    <string name="auto_vs_manual_title">Auto vs Manual</string>
    <string name="plaid_info_title">Plaid Info</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="username_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_btn_text">Login</string>
    <string name="create_account_text">Create an account</string>
    <string name="powered_by_plaid">Powered By Plaid</string>
    <string name="login_failed">Invalid Credentials</string>
    <string name="username_taken">Email already exists!</string>
    <string name="other_login_error">Something went wrong? Can\'t connect to server?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_not_verified">Please verify this email!</string>
    <string name="forgot_password_text">Please enter in your email so we can send you a link to reset your password</string>
    <string name="email_edit_text_hint">Email</string>
    <string name="forgot_password_btn">Reset Password</string>
    <string name="username_not_found_on_database">Couldn\'t find that email!</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="create_account_btn_text">Create Account</string>
    <string name="username_empty">Please enter email</string>
    <string name="password_empty">Please enter password</string>
    <string name="invalid_credentials">Username or password is invalid!</string>
    <string name="invalid_email">Email isn\'t valid</string>
    <string name="invalid_password">Password isn\'t valid\nMust have 5 characters, 1 uppercase, 1 number</string>
    <string name="auth_failed">Authentication failed…</string>
    <string name="server_issue">Couldn\'t connect to server…</string>
    <string name="passwords_not_equal">Passwords Are Not Equal</string>
    <string name="welcome_to_the_app_msg">Welcome!</string>
    <string name="email_empty">Email can\'t be empty</string>
    <string name="resent_verification_email">Resent Verification Email</string>
    <string name="email_still_not_verified">It seems you still aren\'t verified</string>
    <string name="verify_email_prompt">Please Verify your Email. If you need to, you can change your email here</string>
    <string name="verify_email_hint">Email</string>
    <string name="verified_email_btn">I verified my email</string>
    <string name="verified_resend_email">Resend Email</string>
    <string name="add_manual_card">Add Manual Card</string>
    <string name="edit_a_card">Edit a Card</string>
    <string name="add_auto_card">Add Auto Card</string>
    <string name="check_card_history">Check Card History</string>
    <string name="add_manual_transaction">Add Manual transaction</string>
    <string name="rename_card">Rename Card</string>
    <string name="delete_card_option">Delete a Card</string>
    <string name="log_out">Logout</string>
    <string name="cant_do_that_while_logging_out">Sorry, you\'re logging out, you can\'t do that</string>
    <string name="calculate_monthly_payment">Calculate Monthly Payment</string>
    <string name="query_transactions">Query Transactions</string>
    <string name="change_card_name">Change Card Name:</string>
    <string name="enter_card_identifier">Enter Card Identifier:</string>
    <string name="this_is_just_something_you_use_to_identify_your_card">This is just something you use to identify your card</string>
    <string name="cant_be_a_card_name_that_already_exists">(can\'t be a card name that already exists)</string>
    <string name="add_card">Add Card</string>
    <string name="card_identifier">Card Identifier</string>
    <string name="place">Place</string>
    <string name="amount">Amount</string>
    <string name="edit_transaction">Edit Transaction</string>
    <string name="add_this_transaction">Add this transaction</string>
    <string name="no_cards_found">No Cards Found… Go make a card in the main menu!</string>
    <string name="view_history_text">Go</string>
    <string name="no_transactions_found">No Transactions For this Month</string>
    <string name="total_text">Total:</string>
    <string name="up_arrow">↑</string>
    <string name="down_arrow">↓</string>
    <string name="select_date">Select Date</string>
    <string name="select_date_btn_text">Select</string>
    <string name="confirm_delete">Are You Sure?!?!?</string>
    <string name="delete_card_info">If you delete this card, you won\'t be able to be it back!!</string>
    <string name="delete_manual_card_info">Since this is Manual Card, All Transactions will be deleted!!</string>
    <string name="confirm_card_name">Enter the name of the card</string>
    <string name="delete_card_btn_text">Yes I\'m sure\nDelete this Card</string>
    <string name="year_is_empty_text">Year can\'t be empty</string>
    <string name="no_cards_selected_text">Please selected at least one card</string>
    <string name="transactions_still_loading">Getting values, please wait…</string>
    <string name="monthly_calculations_btn">Go</string>
    <string name="year_text">Year</string>
    <string name="sign_in_fail">Sign in Failed!</string>
    <string name="card_already_exists">Card Already Exists!</string>
    <string name="added_card">Added %1$s</string>
    <string name="transaction_edited_successfully">Transaction was Successfully Edited</string>
    <string name="transaction_place_empty">Place cannot be empty</string>
    <string name="transaction_amount_empty">Amount cannot be empty</string>
    <string name="error_msg">Uh oh… there seems to be an error…</string>
    <string name="added_transaction_successfully">Added Transaction!</string>
    <string name="edited_card_successfully">Successfully Edited Card</string>
    <string name="no_transactions_for_date">There\'s no transactions for %1$s</string>
    <string name="card_name_not_confirmed">That isn\'t the name of the card…</string>
    <string name="deleted_card">Deleted card…</string>
    <string name="empty_card_name">Card Name can\'t be empty!</string>
    <string name="sent_password_reset_request">Sent a Request for a Password Reset</string>
    <string name="card_changed_refreshing">Card changed… refreshing cards</string>
    <string name="renew_auto_card_prompt">Please refresh this card by re-adding it!</string>
    <string name="list_view_item">List</string>
    <string name="calendar_view_item">Calendar</string>
    <string name="add_item">Add</string>
    <string name="edit_transaction_item">Edit</string>
    <string name="delete_transaction_item">Delete</string>
    <string name="delete_transaction_prompt">Are you sure you want to delete this transaction?</string>
    <string name="accept_transaction_delete">Delete</string>
    <string name="cancel_transaction_delete">Keep</string>
    <string name="info_item">FAQ</string>
    <string name="connection_failed">Couldn\'t connect to the server</string>
    <string name="timeout_msg">Taking too long to get response</string>
    <string name="delete_user_header_text">Are you absolutely sure you want to delete your account?!?!</string>
    <string name="delete_user_sub_header_text">There\'s no going back!</string>
    <string name="delete_user_instructions">Please enter your username and password to be sure</string>
    <string name="delete">Delete</string>
    <string name="username_doesnt_match_with_account">That\'s not this account\'s username</string>
    <string name="account_deleted">Account was deleted… goodbye</string>
    <string name="delete_account_title">Delete Account</string>
    <string name="delete_account_summary">Delete your info for good</string>
    <string name="show_animations_title">Toggle Animations</string>
    <string name="show_animations_summary">Don\'t like animations?</string>
    <string name="place_hint">Enter place keyword</string>
    <string name="min">Min.</string>
    <string name="max">Max.</string>
    <string name="min_year">Min Year</string>
    <string name="max_year">Max Year</string>
    <string name="to">to</string>
    <string name="query_transactions_btn_text">Go</string>
    <string name="min_year_larger_than_max_year">Min year can\'t be larger than max year</string>
    <string name="min_month_larger_than_max_month">Min month can\'t be larger than max month</string>
    <string name="min_amount_larger_than_max_amount">Min amount can\'t be larger than max amount</string>
    <string name="no_year_inputs">Please enter a value for both years</string>
    <string name="answer">A: </string>
    <string name="difference_between_auto_and_manual">Q: What\'s the difference between an auto card and a manual card?</string>
    <string name="what_is_an_auto_card">An Auto Card gets your transactions by going to your bank. To add one, you need to give your username and password from the bank of your choice.</string>
    <string name="what_is_a_manual_card">A Manual Card is for when you don\'t feel comfortable giving your bank information. This will require you to manually enter in your transaction details.</string>
    <string name="plaid_question">Q: What is \"Plaid\"?</string>
    <string name="what_is_plaid">Plaid is the company that uses your information to get your transaction data from your card.</string>
    <string name="plaid_safety">We take no responsibility for what plaid does with your data</string>
    <string name="auto_card_link_message">What is an auto card?</string>
    <string name="this_is_done_through">This is done through</string>
    <string name="plaid">plaid</string>
    <string name="couldnt_connect_to_server">Couldn\'t connect to the server</string>
    <string name="retry_btn">Retry</string>
</resources>