<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:paddingBottom="8dp"
        android:textAlignment="center"
        android:text="@string/plaid_question"/>

    <View
        style="@style/horizontal_line" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/answer"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="24sp"
            android:text="@string/what_is_plaid"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/plaid_safety"/>

        <TextView
            android:id="@+id/link_to_auto_card_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/link_color"
            android:textAlignment="center"
            android:text="@string/auto_card_link_message"
            android:onClick="onClick"/>

    </LinearLayout>

</ScrollView>