<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/close_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="X"
        android:background="@drawable/circle"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:layout_gravity="end" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Spinner
            android:id="@+id/month_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/abbreviated_months" />

        <EditText
            android:id="@+id/year_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/year_text"
            android:inputType="number"
            android:maxLength="4" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/increment_btn"
                android:layout_width="48dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/up_arrow" />

            <Button
                android:id="@+id/decrement_btn"
                android:layout_width="48dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/down_arrow" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/select_date_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_date_btn_text" />

</LinearLayout>